--- a/Swallab/backstage/set_time.html
+++ b/Swallab/backstage/set_time.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/bootstrap.css">
-    <link rel="stylesheet" href="../css/backstage.css">
+    <link rel="stylesheet" href="../_css/bootstrap.css">
+    <link rel="stylesheet" href="../_css/backstage.css">
     <title>Set Time</title>
 </head>
 
@@ -157,9 +157,9 @@
             </div>
         </div>
     </div>
-    <script src="../js/jquery-3.7.1.js"></script>
-    <script src="../js/backstage.js"></script>
-    <script src="../js/setTime.js"></script>
+    <script src="../_js/jquery-3.7.1.js"></script>
+    <script src="../_js/bootstrap.bundle.js"></script>
+    <script src="../_js/setTime.js"></script>
 </body>
 
 </html>
