--- a/Swallab/foodNotes/demoHotpot.html
+++ b/Swallab/foodNotes/demoHotpot.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>青花驕麻辣鍋</title>
-    <link rel="stylesheet" href="../css/bootstrap.css">
-    <link rel="stylesheet" href="../css/demoHotpot.css">
+    <link rel="stylesheet" href="../_css/bootstrap.css">
+    <link rel="stylesheet" href="../_css/demoHotpot.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
@@ -14,7 +14,7 @@
         <div class="container-fluid">
             <!-- LOGO -->
             <a class="navbar-brand ms-5" href="#">
-                <img src="../image/大專Logo.jpg" alt="" class="logo d-inline-block align-text-top">
+                <img src="../_images/其他/大專Logo.jpg" alt="" class="logo d-inline-block align-text-top">
             </a>
             <!-- 伸縮 -->
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -32,33 +32,33 @@
                 <form class="ms-0 me-5" role="search" style="width: 100%;">
                     <div class="d-flex container-fluid py-3">
                         <!-- hover、click 換 icon -> src="./img/blog.png" -->
-                        <img src="../image/restaurant.png" class="icon mt-2 me-2" alt="">
+                        <img src="../_images/其他/restaurant.png" class="icon mt-2 me-2" alt="">
                         <!-- 搜尋框 + 情境按鈕(pill 會改成底線) -->
                         <div class="d-block container-fluid position-relative m-0 p-0">
                             <input class="form-control m-0" type="search" placeholder="Click" aria-label="Search">
                             <button class="position-absolute translate-middle rounded-pill"
                                 style="display: block; margin-left: 10%; margin-top: 1.5em; white-space: nowrap;">
-                                <img class="icon" src="../image/dating.png" alt="">約會
+                                <img class="icon" src="../_images/其他/dating.png" alt="">約會
                             </button>
                             <button class="position-absolute translate-middle rounded-pill"
                                 style="display: block; margin-left: 30%; margin-top: 1.5em; white-space: nowrap;">
-                                <img class="icon" src="../image/group.png" alt="">聚餐
+                                <img class="icon" src="../_images/其他/group.png" alt="">聚餐
                             </button>
                             <button class="position-absolute translate-middle rounded-pill"
                                 style="display: block; margin-left: 50%; margin-top: 1.5em; white-space: nowrap;">
-                                <img class="icon" src="../image/confetti.png" alt="">慶生
+                                <img class="icon" src="../_images/其他/confetti.png" alt="">慶生
                             </button>
                             <button class="position-absolute translate-middle rounded-pill"
                                 style="display: block; margin-left: 70%; margin-top: 1.5em; white-space: nowrap;">
-                                <img class="icon" src="../image/handshake.png" alt="">商務
+                                <img class="icon" src="../_images/其他/handshake.png" alt="">商務
                             </button>
                             <button class="position-absolute translate-middle rounded-pill"
                                 style="display: block; margin-left: 90%; margin-top: 1.5em; white-space: nowrap;">
-                                <img class="icon" src="../image/disabled-people.png" alt="">無障礙
+                                <img class="icon" src=".._images/其他/disabled-people.png" alt="">無障礙
                             </button>
                         </div>
                         <!-- 搜尋 icon = submit -->
-                        <img src="../image/loupe.png" class="icon mt-2 ms-1" alt="" type="submit">
+                        <img src=".._images/其他/loupe.png" class="icon mt-2 ms-1" alt="" type="submit">
                     </div>
                 </form>
                 <!-- 登入及註冊按鈕 -->
@@ -91,7 +91,7 @@
                 <div class="card author">
                     <a href="./author.html">
                         <div class="card-body p-0" >
-                            <img src="../image/winnie.webp" alt="" class="img-fluid">
+                            <img src="../_images/其他/winnie.webp" alt="" class="img-fluid">
                         </div>
                     </a>
                     <div class="card-footer d-flex align-items-center justify-content-center" >
@@ -124,31 +124,31 @@
                     <p class="mb-3" >
                         ▼青花驕麻辣鍋台中崇德店位於崇德路三段與崇德九路交叉口，附近美食還有奧樂美特、很牛炭燒牛排、森森燒肉、拾七石頭火鍋、八豆食府、本格和牛燒肉放題、尚牛二館…等，完全是個美食餐廳聚集地。
                     </p>
-                    <img src="../image/食記demo/青花驕1.webp" alt="" class="mb-5">
+                    <img src="../_images/食記demo/青花驕1.webp" alt="" class="mb-5">
                     <p class="mb-3" >
                         ▼青花椒麻辣鍋，湯頭喝起來微麻帶辣、香醇順口，不過可能是我嘴鈍，覺得重慶江津九葉青花椒的層次香氣不明顯，好喝但不特別。而鍋底的鴨血滑嫩、豆腐孔洞不算多但有入味好吃。
                     </p>
-                    <img src="../image/食記demo/青花驕麻辣鍋.jpg" alt="" class="mb-5" >
+                    <img src="../_images/食記demo/青花驕麻辣鍋.jpg" alt="" class="mb-5" >
                     <p class="mb-3" >
                         ▼青花椒麻口水雞，椒麻醬香氣十足，雞肉也蠻嫩的，好吃。
                     </p>
-                    <img src="../image/食記demo/青花椒麻口水雞.jpg" alt="" class="mb-5">
+                    <img src="../_images/食記demo/青花椒麻口水雞.jpg" alt="" class="mb-5">
                     <p class="mb-3" >
                         ▼牛三拼盛宴(牛小排、雪花牛、牛梅花)，我最喜歡油脂分布均勻的牛小排，在熱湯裡輕涮至粉紅色就可以吃啦，香軟嫩口！
                     </p>
-                    <img src="../image/食記demo/青花驕牛三拼.jpg" alt="" class="mb-5">
+                    <img src="../_images/食記demo/青花驕牛三拼.jpg" alt="" class="mb-5">
                     <p class="mb-3" >
                         ▼仙氣海宴，這整盤~我只吃到了干貝，煮熟後軟彈帶嫩，不錯吃。
                     </p>
-                    <img src="../image/食記demo/青花驕海鮮.jpg" alt="" class="mb-5">
+                    <img src="../_images/食記demo/青花驕海鮮.jpg" alt="" class="mb-5">
                     <p class="mb-3">
                         ▼鮮蝦滑、墨魚滑，鮮蝦滑吃得到蝦肉、墨魚滑也吃得到細小墨魚肉，蠻實在的。
                     </p>
-                    <img src="../image/食記demo/青花驕蝦滑.jpg" alt="" class="mb-5">
+                    <img src="../_images/食記demo/青花驕蝦滑.jpg" alt="" class="mb-5">
                     <p class="mb-3" >
                         ▼甜點冰糖銀耳，裡頭除了細細的銀耳還有枸杞，冰甜好喝，只有一小杯不夠啊~
                     </p>
-                    <img src="../image/食記demo/青花驕甜點.jpg" alt="" class="mb-5">
+                    <img src="../_images/食記demo/青花驕甜點.jpg" alt="" class="mb-5">
                 
                     <article>
                         <h5>青花驕麻辣鍋 台中崇德店</h5>
@@ -204,7 +204,7 @@
             <div class="d-flex justify-content-center mt-4 m-0">
                 <div class="row d-flex justify-content-center m-2 p-2 commentHeadphoto" >
                     <div class="col-4 d-flex flex-column align-items-center justify-content-center p-3" >
-                        <img src="../image/小豬皮傑.jpg" alt="">
+                        <img src="../_images/其他/小豬皮傑.jpg" alt="">
                         <div >小豬皮傑</div>
                     </div>
                     <div class="col-8 p-0 d-flex flex-column">
@@ -221,7 +221,7 @@
             <div class="d-flex justify-content-center mt-4 m-0">
                 <div class="row d-flex justify-content-center m-2 p-2 commentHeadphoto" >
                     <div class="col-4 d-flex flex-column align-items-center justify-content-center p-3" >
-                        <img src="../image/屹耳.webp" alt="">
+                        <img src="../_images/其他/屹耳.webp" alt="">
                         <div >屹耳</div>
                     </div>
                     <div class="col-8 p-0 d-flex flex-column">
@@ -238,7 +238,7 @@
             <div class="d-flex justify-content-center mt-4 m-0">
                 <div class="row d-flex justify-content-center m-2 p-2 commentHeadphoto" >
                     <div class="col-4 d-flex flex-column align-items-center justify-content-center p-3" >
-                        <img src="../image/跳跳虎.jpg" alt="">
+                        <img src="../_images/其他/跳跳虎.jpg" alt="">
                         <div >跳跳虎</div>
                     </div>
                     <div class="col-8 p-0 d-flex flex-column">
@@ -278,7 +278,7 @@
 
     
     <!-- TOP按鈕 -->
-    <img src="../image/top.png" alt="" class="top" id="top">
+    <img src="../_images/其他/top.png" alt="" class="top" id="top">
 
     <footer>
         <div class="container mt-3">
@@ -286,7 +286,7 @@
         <div class="row justify-content-center">
             <!-- 左邊logo -->
             <div class="col-4">
-                <img src="../image/大專Logo.jpg" class="logo" alt="">
+                <img src="../_images/其他/大專Logo.jpg" class="logo" alt="">
             </div>
             <!-- 右邊三列 -->
             <div class="col-4">
@@ -310,8 +310,8 @@
 
     </footer>
 
-    <script src="../js/bootstrap.bundle.js"></script>
-    <script src="../js/jquery-3.7.1.js"></script>
-    <script src="../js/demoHotpot.js"></script>
+    <script src="../_js/bootstrap.bundle.js"></script>
+    <script src="../_js/jquery-3.7.1.js"></script>
+    <script src="../_js/demoHotpot.js"></script>
 </body>
 </html>
