css＋html進度同步＋圖片上傳

--- a/Swallab/login/order.html
+++ b/Swallab/login/order.html
@@ -24,7 +24,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-2 sidebar ">
-                <a href="#">個人檔案</a>
+                <a href="./profile.html">個人檔案</a>
                 <a href="#">我的訂單</a>
                 <a href="#">歷史紀錄</a>
                 <a href="#">發布食記</a>
@@ -47,11 +47,10 @@
                 </div>
                 <div class="row mt-5 product-row" id="product-row-1">
                     <div class="col-md-2 d-flex align-items-center">
-                        <img src="./../image/hotpot/青花驕內頁/個人即享餐/1.avif" class="product-img" alt="Fries">
+                        <img src="./../image/hotpot/青花驕內頁/個人即享餐/1.avif" class="product-img" >
                     </div>
                     <div class="col-md-4 product-details">
                         <span class="items">個人即享鍋</span>
-                        <!-- <span class="price" id="price-1">$310</span> -->
                         <div>
                         <span class="price">$</span>
                         <span class="price" id="price-1">310</span>
