--- a/Swallab/headpage/headpage.html
+++ b/Swallab/headpage/headpage.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -10,7 +10,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
-    <script href=""></script>
     <!-- <link rel="stylesheet" href="style.css"> -->
     <title>HeadPage</title>
     <!-- <style>
@@ -416,8 +415,9 @@
     </script> -->
     <!-- <script src="../_js/jquery-3.7.1.js"></script>
     <script src="../_js/bootstrap.bundle.js"></script> -->
-    <script src="../_js/nav.js"></script>
-    <script src="../_js/footer.js"></script>
+    <script href="../_js/nav.js"></script>
+    <script href="../_js/headpage_opendoor_animate.js"></script>
+    <script href="../_js/footer.js"></script>
     <script src="../_js/headpage_opendoor_animate.js"></script>
 </body>
 
