--- a/Swallab/nav/nav.html
+++ b/Swallab/nav/nav.html
@@ -1,10 +1,25 @@
-<!-- NAV_begin : sticky-top -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link href="../_css/root.css" rel="stylesheet">
+    <link href="../_css/nav.css" rel="stylesheet">
+    <link href="../_css/footer.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="../_css/myHistory.css">
+    <link rel="stylesheet" href="../_css/myHistory_temp_order.css">
+</head>
+<body>
+    <!-- NAV_begin : sticky-top -->
 <nav class="navbar navbar-expand bg-primary sticky-top shadow bg-body rounded">
     <div class="container-fluid">
         <!-- LOGO -->
         <a class="navbar-brand ms-5" href="#">
             <img src="../_images/root/LOGO.jpg" alt="" class="logo d-inline-block align-text-top">
-        </a>888
+        </a>
         <!-- 伸縮 -->
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <div class="nav ms-0 me-5 row">
@@ -103,5 +118,10 @@
             </div>
         </div>
     </div>
+    
 </nav>
 <!-- NAV_end -->
+<script src="../_js/footer.js"></script>
+<script src="../_js/nav.js"></script>
+</body>
+</html>
