--- a/Swallab/login/profile.html
+++ b/Swallab/login/profile.html
@@ -22,7 +22,7 @@
             </div>
         </div>  
     </header>
-    <div class="container-fluid">
+    <div class="container">
         <div class="row">
             <div class="col-md-2 sidebar ">
                 <a href="#">個人檔案</a>
