--- a/Swallab/login/profile.html
+++ b/Swallab/login/profile.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header>
-        <div class="container">
+        <div class="container-md">
             <div class="row ">
                 <div class="col-6">
                     <img src="./../image/大專logo.png" style="border-radius: 50%; width:15%" class="m-2 ">
