nav color, css fixed

--- a/Swallab/footer/footer.html
+++ b/Swallab/footer/footer.html
@@ -1,4 +1,14 @@
-<!-- Footer_begin -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="../_css/footer.css">
+    <link rel="stylesheet" href="../_js/footer.js">
+</head>
+<body>
+    <!-- Footer_begin -->
 <footer class="container-fluid mt-3">
     <!-- 左右二欄 -->
     <div class="row justify-content-center mt-3">
@@ -26,3 +36,5 @@
     </div>
 </footer>
 <!-- Footer_end -->
+</body>
+</html>
