--- a/Swallab/login/order.html
+++ b/Swallab/login/order.html
@@ -9,11 +9,12 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
-    <link href="./../_css/order.css" rel="stylesheet">
+    <link href="./../_css/orderxi.css" rel="stylesheet">
+    <link rel="stylesheet" href="./../_css/backstage.css">
 </head>
 <body>
     <header>
-        <div class="container-md">
+        <div class="container">
             <div class="row ">
                 <div class="col-6">
                     <img src="./../image/大專logo.png" style="border-radius: 50%; width:15%" class="m-2 ">
@@ -21,15 +22,23 @@
             </div>
         </div>  
     </header>
-    <div class="container-fluid">
+    <div class="container">
         <div class="row">
-            <div class="col-md-2 sidebar ">
-                <a href="./profile.html">個人檔案</a>
-                <a href="#">我的訂單</a>
-                <a href="#">歷史紀錄</a>
-                <a href="#">發布食記</a>
+            <div class="mySidebar col-2">
+                <a href="./../login/profile.html" >
+                    <p>個人檔案</p>
+                </a>
+                <a href="" class="active">
+                    <p>我的訂單</p>
+                </a>
+                <a href="">
+                    <p>歷史紀錄</p>
+                </a>
+                <a href="" >
+                    <p>發布食記</p>
+                </a>
             </div>
-            <div class="col-md-10">
+            <div class="col-9 myorder">
                 <div class="row mt-3">
                     <div class="col-12 d-flex justify-content-between">
                         <h4>會員中心 -> 我的訂單</h4>
