fix names in files

--- a/Swallab/footer/footer.html
+++ b/Swallab/footer/footer.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../_css/footer.css">
-    <link rel="stylesheet" href="../_js/footer.js">
+    <link rel="stylesheet" href="../css/footer.css">
+    <link rel="stylesheet" href="../js/footer.js">
 </head>
 <body>
     <!-- Footer_begin -->
@@ -14,7 +14,7 @@
     <div class="row justify-content-center mt-3">
         <!-- 左邊logo -->
         <div class="col-4">
-            <img src="../_images/root/LOGO.jpg" class="logo" alt="">
+            <img src="../images/root/LOGO.jpg" class="logo" alt="">
         </div>
         <!-- 右邊三列 -->
         <div class="col-4">
