--- a/Swallab/headpage/headpage.html
+++ b/Swallab/headpage/headpage.html
@@ -301,7 +301,7 @@
         <div class="row justify-content-center mt-3">
             <!-- 左邊logo -->
             <div class="col-4">
-                <img src="../_images/root/LOGO.jpg" class="logo" alt="">
+                <img src="../images/root/LOGO.jpg" class="logo" alt="">
             </div>
             <!-- 右邊三列 -->
             <div class="col-4">
@@ -413,12 +413,12 @@
         }
 
     </script> -->
-    <!-- <script src="../_js/jquery-3.7.1.js"></script>
-    <script src="../_js/bootstrap.bundle.js"></script> -->
-    <script href="../_js/nav.js"></script>
-    <script href="../_js/headpage_opendoor_animate.js"></script>
-    <script href="../_js/footer.js"></script>
-    <script src="../_js/headpage_opendoor_animate.js"></script>
+    <!-- <script src="../js/jquery-3.7.1.js"></script>
+    <script src="../js/bootstrap.bundle.js"></script> -->
+    <script href="../js/nav.js"></script>
+    <script href="../js/headpage_opendoor_animate.js"></script>
+    <script href="../js/footer.js"></script>
+    <script src="../js/headpage_opendoor_animate.js"></script>
 </body>
 
 </html>
