--- a/Swallab/myHistory/myFavorite.html
+++ b/Swallab/myHistory/myFavorite.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="../_css/root.css" rel="stylesheet">
-    <link href="../_css/nav.css" rel="stylesheet">
-    <link href="../_css/footer.css" rel="stylesheet">
+    <link href="../css/root.css" rel="stylesheet">
+    <link href="../css/nav.css" rel="stylesheet">
+    <link href="../css/footer.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="../_css/myHistory.css">
-    <link rel="stylesheet" href="../_css/myHistory_temp_order.css">
+    <link rel="stylesheet" href="../css/myHistory.css">
+    <link rel="stylesheet" href="../css/myHistory_temp_order.css">
 </head>
 
 <body>
@@ -19,7 +19,7 @@
         <div class="container-fluid">
             <!-- LOGO -->
             <a class="navbar-brand ms-5" href="#">
-                <img src="../_images/root/LOGO.jpg" alt="" class="logo d-inline-block align-text-top">
+                <img src="../images/root/LOGO.jpg" alt="" class="logo d-inline-block align-text-top">
             </a>
             <!-- 伸縮 -->
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -91,27 +91,27 @@
                             <!-- 搜尋框 end -->
                             <button class="position-absolute translate-middle rounded-pill"
                                 style="display: block; margin-left: 10%; margin-top: 1.5em; white-space: nowrap; z-index: 1;">
-                                <img class="icon" src="../_images/nav_icon/dating.png" alt="">約會
+                                <img class="icon" src="../images/nav_icon/dating.png" alt="">約會
                             </button>
                             <button class="position-absolute translate-middle rounded-pill"
                                 style="display: block; margin-left: 30%; margin-top: 1.5em; white-space: nowrap; z-index: 1;">
-                                <img class="icon" src="../_images/nav_icon/group.png" alt="">聚餐
+                                <img class="icon" src="../images/nav_icon/group.png" alt="">聚餐
                             </button>
                             <button class="position-absolute translate-middle rounded-pill"
                                 style="display: block; margin-left: 50%; margin-top: 1.5em; white-space: nowrap; z-index: 1;">
-                                <img class="icon" src="../_images/nav_icon/confetti.png" alt="">慶生
+                                <img class="icon" src="../images/nav_icon/confetti.png" alt="">慶生
                             </button>
                             <button class="position-absolute translate-middle rounded-pill"
                                 style="display: block; margin-left: 70%; margin-top: 1.5em; white-space: nowrap; z-index: 1;">
-                                <img class="icon" src="../_images/nav_icon/handshake.png" alt="">商務
+                                <img class="icon" src="../images/nav_icon/handshake.png" alt="">商務
                             </button>
                             <button class="position-absolute translate-middle rounded-pill"
                                 style="display: block; margin-left: 90%; margin-top: 1.5em; white-space: nowrap; z-index: 1;">
-                                <img class="icon" src="../_images/nav_icon/disabled-people.png" alt="">無障礙
+                                <img class="icon" src="../images/nav_icon/disabled-people.png" alt="">無障礙
                             </button>
                         </div>
                         <!-- 搜尋 icon = submit -->
-                        <input type="image" src="../_images/nav_icon/loupe.png" class="icon mt-2 ms-0"
+                        <input type="image" src="../images/nav_icon/loupe.png" class="icon mt-2 ms-0"
                             onclick="document.search.submit()">
                         <!-- <img src="./img/loupe.png" class="icon mt-2 ms-1" alt="" type="submit"> -->
                     </div>
@@ -176,7 +176,7 @@
                     <div class="row mt-5 myRecordsTemp align-self-center">
                         <div class="col-2">
                             <div class="myRecordsContainer align-self-center">
-                                <img src="../_images/headpage_mainphoto/食記_1.jpeg" alt="">
+                                <img src="../images/headpage_mainphoto/食記_1.jpeg" alt="">
                             </div>
                         </div>
                         <div class="col-8">
@@ -211,7 +211,7 @@
                     <div class="row mt-5 myRecordsTemp align-self-center">
                         <div class="col-2">
                             <div class="myRecordsContainer align-self-center">
-                                <img src="../_images/headpage_mainphoto/食記_1.jpeg" alt="">
+                                <img src="../images/headpage_mainphoto/食記_1.jpeg" alt="">
                             </div>
                         </div>
                         <div class="col-8">
@@ -246,7 +246,7 @@
                     <div class="row mt-5 myRecordsTemp align-self-center">
                         <div class="col-2">
                             <div class="myRecordsContainer align-self-center">
-                                <img src="../_images/headpage_mainphoto/食記_1.jpeg" alt="">
+                                <img src="../images/headpage_mainphoto/食記_1.jpeg" alt="">
                             </div>
                         </div>
                         <div class="col-8">
@@ -291,7 +291,7 @@
         <div class="row justify-content-center mt-3">
             <!-- 左邊logo -->
             <div class="col-4">
-                <img src="../_images/root/LOGO.jpg" class="logo" alt="">
+                <img src="../images/root/LOGO.jpg" class="logo" alt="">
             </div>
             <!-- 右邊三列 -->
             <div class="col-4">
@@ -313,10 +313,10 @@
         </div>
     </footer>
     <!-- Footer_end -->
-    <script scr="../_js/nav.js"></script>
-    <script scr="../_js/footer.js"></script>
-    <script src="../_js/jquery-3.7.1.js"></script>
-    <script src="../_js/bootstrap.bundle.js"></script>
+    <script scr="../js/nav.js"></script>
+    <script scr="../js/footer.js"></script>
+    <script src="../js/jquery-3.7.1.js"></script>
+    <script src="../js/bootstrap.bundle.js"></script>
 </body>
 
 </html>
