--- a/Swallab/nav/nav.html
+++ b/Swallab/nav/nav.html
@@ -5,16 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="../_css/root.css" rel="stylesheet">
-    <link href="../_css/nav.css" rel="stylesheet">
-    <link href="../_css/footer.css" rel="stylesheet">
+    <link href="../css/root.css" rel="stylesheet">
+    <link href="../css/nav.css" rel="stylesheet">
+    <link href="../css/footer.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="../_css/myHistory.css">
-    <link rel="stylesheet" href="../_css/myHistory_temp_order.css">
+    <link rel="stylesheet" href="../css/myHistory.css">
+    <link rel="stylesheet" href="../css/myHistory_temp_order.css">
 </head>
 
 <body>
@@ -23,7 +23,7 @@
         <div class="container">
             <!-- LOGO -->
             <a class="navbar-brand ms-5" href="../headpage/headpage.html">
-                <img src="../_images/root/LOGO.jpg" alt="" class="logo d-inline-block align-text-top">
+                <img src="../images/root/LOGO.jpg" alt="" class="logo d-inline-block align-text-top">
             </a>
             <!-- 伸縮 -->
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -94,27 +94,27 @@
                             <!-- 搜尋框 end -->
                             <button class="position-absolute translate-middle rounded-pill filter_btn"
                                 style="margin-left: 10%;">
-                                <img class="icon" src="../_images/nav_icon/dating.png" alt="">約會
+                                <img class="icon" src="../images/nav_icon/dating.png" alt="">約會
                             </button>
                             <button class="position-absolute translate-middle rounded-pill filter_btn"
                                 style="margin-left: 30%;">
-                                <img class="icon" src="../_images/nav_icon/group.png" alt="">聚餐
+                                <img class="icon" src="../images/nav_icon/group.png" alt="">聚餐
                             </button>
                             <button class="position-absolute translate-middle rounded-pill filter_btn"
                                 style="margin-left: 50%;">
-                                <img class="icon" src="../_images/nav_icon/confetti.png" alt="">慶生
+                                <img class="icon" src="../images/nav_icon/confetti.png" alt="">慶生
                             </button>
                             <button class="position-absolute translate-middle rounded-pill filter_btn"
                                 style="margin-left: 70%;">
-                                <img class="icon" src="../_images/nav_icon/handshake.png" alt="">商務
+                                <img class="icon" src="../images/nav_icon/handshake.png" alt="">商務
                             </button>
                             <button class="position-absolute translate-middle rounded-pill filter_btn"
                                 style="margin-left: 90%;">
-                                <img class="icon" src="../_images/nav_icon/disabled-people.png" alt="">無障礙
+                                <img class="icon" src="../images/nav_icon/disabled-people.png" alt="">無障礙
                             </button>
                         </div>
                         <!-- 搜尋 icon = submit -->
-                        <input type="image" src="../_images/nav_icon/loupe.png" class="icon mt-2 ms-0"
+                        <input type="image" src="../images/nav_icon/loupe.png" class="icon mt-2 ms-0"
                             onclick="document.search.submit()">
                         <!-- <img src="./img/loupe.png" class="icon mt-2 ms-1" alt="" type="submit"> -->
                     </div>
@@ -129,8 +129,8 @@
         </div>
     </nav>
     <!-- NAV_end -->
-    <script src="../_js/footer.js"></script>
-    <script src="../_js/nav.js"></script>
+    <script src="../js/footer.js"></script>
+    <script src="../js/nav.js"></script>
 </body>
 
 </html>
