--- a/Swallab/login/profile.html
+++ b/Swallab/login/profile.html
@@ -22,7 +22,7 @@
                     <p>個人檔案</p>
                 </a>
                 <a href="./order.html">
-                    <p>我的訂單</p>
+                    <p>我的訂單1</p>
                 </a>
                 <a href="">
                     <p>歷史紀錄</p>
