--- a/Swallab/backstage/management_menu2.html
+++ b/Swallab/backstage/management_menu2.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../_css/bootstrap.css">
+    <link rel="stylesheet" href="../css/bootstrap.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="../_css/backstage.css">
+    <link rel="stylesheet" href="../css/backstage.css">
     <title>Management Menu</title>
 </head>
 
@@ -54,7 +54,7 @@
                         <div class="myMenuList row">
                             <div class="col-2">單點 丸子類</div>
                             <div class="col-2">
-                                <img src="../_images/火鍋/青花驕內頁/單點 丸子類/1.avif">
+                                <img src="../images/火鍋/青花驕內頁/單點 丸子類/1.avif">
                             </div>
                             <div class="col-2">干貝三鮮丸 (6顆)</div>
                             <div class="col-2">240</div>
@@ -66,7 +66,7 @@
                         <div class="myMenuList row">
                             <div class="col-2">單點 丸子類</div>
                             <div class="col-2">
-                                <img src="../_images/火鍋/青花驕內頁/單點 丸子類/2.avif">
+                                <img src="../images/火鍋/青花驕內頁/單點 丸子類/2.avif">
                             </div>
                             <div class="col-2">干貝三鮮丸 (6顆)</div>
                             <div class="col-2">240</div>
@@ -78,7 +78,7 @@
                         <div class="myMenuList row">
                             <div class="col-2">單點 丸子類</div>
                             <div class="col-2">
-                                <img src="../_images/火鍋/青花驕內頁/單點 丸子類/3.avif">
+                                <img src="../images/火鍋/青花驕內頁/單點 丸子類/3.avif">
                             </div>
                             <div class="col-2">草蝦丸 (6顆)</div>
                             <div class="col-2">130</div>
@@ -90,7 +90,7 @@
                         <div class="myMenuList row">
                             <div class="col-2">單點 丸子類</div>
                             <div class="col-2">
-                                <img src="../_images/火鍋/青花驕內頁/單點 丸子類/4.avif">
+                                <img src="../images/火鍋/青花驕內頁/單點 丸子類/4.avif">
                             </div>
                             <div class="col-2">花枝丸 (6顆)</div>
                             <div class="col-2">240</div>
@@ -102,7 +102,7 @@
                         <div class="myMenuList row">
                             <div class="col-2">單點 丸子類</div>
                             <div class="col-2">
-                                <img src="../_images/火鍋/青花驕內頁/單點 丸子類/5.avif">
+                                <img src="../images/火鍋/青花驕內頁/單點 丸子類/5.avif">
                             </div>
                             <div class="col-2">貢丸 (8顆)</div>
                             <div class="col-2">110</div>
@@ -114,7 +114,7 @@
                         <div class="myMenuList row">
                             <div class="col-2">單點 火鍋料</div>
                             <div class="col-2">
-                                <img src="../_images/火鍋/青花驕內頁/單點 火鍋料/1.avif">
+                                <img src="../images/火鍋/青花驕內頁/單點 火鍋料/1.avif">
                             </div>
                             <div class="col-2">花枝蝦漿 (150g)</div>
                             <div class="col-2">230</div>
@@ -125,7 +125,7 @@
                         </div>
                         <div class="myMenuList row">
                             <div class="col-2">單點 火鍋料</div>
-                            <div class="col-2"><img src="../_images/火鍋/青花驕內頁/單點 火鍋料/2.avif"></div>
+                            <div class="col-2"><img src="../images/火鍋/青花驕內頁/單點 火鍋料/2.avif"></div>
                             <div class="col-2">飛魚卵福袋 (6顆)</div>
                             <div class="col-2">150</div>
                             <div class="col-2">
@@ -135,7 +135,7 @@
                         </div>
                         <div class="myMenuList row">
                             <div class="col-2">單點 火鍋料</div>
-                            <div class="col-2"><img src="../_images/火鍋/青花驕內頁/單點 火鍋料/3.avif"></div>
+                            <div class="col-2"><img src="../images/火鍋/青花驕內頁/單點 火鍋料/3.avif"></div>
                             <div class="col-2">黃金魚蛋 (10顆)</div>
                             <div class="col-2">110</div>
                             <div class="col-2">
@@ -146,7 +146,7 @@
                         <div class="myMenuList row">
                             <div class="col-2">單點 火鍋料</div>
                             <div class="col-2">
-                                <img src="../_images/火鍋/青花驕內頁/單點 火鍋料/4.avif">
+                                <img src="../images/火鍋/青花驕內頁/單點 火鍋料/4.avif">
                             </div>
                             <div class="col-2">魚包蛋 (8顆)</div>
                             <div class="col-2">130</div>
@@ -158,7 +158,7 @@
                         <div class="myMenuList row">
                             <div class="col-2">單點 火鍋料</div>
                             <div class="col-2">
-                                <img src="../_images/火鍋/青花驕內頁/單點 火鍋料/5.avif">
+                                <img src="../images/火鍋/青花驕內頁/單點 火鍋料/5.avif">
                             </div>
                             <div class="col-2">甜不辣 (6個)</div>
                             <div class="col-2">100</div>
@@ -222,9 +222,9 @@
             </div>
         </div>
     </div>
-    <script src="../_js/jquery-3.7.1.js"></script>
-    <script src="../_js/backstage.js"></script>
-    <script src="../_js/management2.js"></script>
+    <script src="../js/jquery-3.7.1.js"></script>
+    <script src="../js/backstage.js"></script>
+    <script src="../js/management2.js"></script>
 </body>
 
 </html>
