--- a/Swallab/backstage/set_info.html
+++ b/Swallab/backstage/set_info.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../_css/bootstrap.css">
-    <link rel="stylesheet" href="../_css/backstage.css">
+    <link rel="stylesheet" href="../css/bootstrap.css">
+    <link rel="stylesheet" href="../css/backstage.css">
     <title>Set Information</title>
 </head>
 
@@ -53,7 +53,7 @@
                         </label><br>
                         <label for="restaurantAvergae">
                             <h5>
-                                均&emsp;&emsp;消 :
+                                平均消費 :
                             </h5>
                             <input id="restaurantAvergae">
                         </label><br>
