--- a/Swallab/backstage/new_oder.html
+++ b/Swallab/backstage/new_oder.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../_css/bootstrap.css">
-    <link rel="stylesheet" href="../_css/backstage.css">
+    <link rel="stylesheet" href="../css/bootstrap.css">
+    <link rel="stylesheet" href="../css/backstage.css">
     <title>New Oder</title>
 </head>
 <body>
@@ -82,8 +82,8 @@
     <div class="footer">
         footer
     </div>
-    <script src="../_js/jquery-3.7.1.js"></script>
-    <script src="../_js/bootstrap.bundle.js"></script>
-    <script src="../_js/backstageOder.js"></script>
+    <script src="../js/jquery-3.7.1.js"></script>
+    <script src="../js/backstage.js"></script>
+    <script src="../js/backstageOder.js"></script>
 </body>
 </html>
