--- a/Swallab/login/profile.html
+++ b/Swallab/login/profile.html
@@ -10,14 +10,14 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link href="./../_css/profile.css" rel="stylesheet">
+    <link href="./../css/profile.css" rel="stylesheet">
 </head>
 <body>
     <header>
         <div class="container-md">
             <div class="row ">
                 <div class="col-6">
-                    <img src="./../image/大專logo.png" style="border-radius: 50%; width:15%" class="m-2 ">
+                    <img src="../images/root/LOGO.jpg" style="border-radius: 50%; width:15%" class="m-2 ">
                 </div>
             </div>
         </div>  
