--- a/Swallab/restaurant/dessert.html
+++ b/Swallab/restaurant/dessert.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>餐廳首頁</title>
-    <link rel="stylesheet" href="./../_css/bootstrap.css">
-    <link rel="stylesheet" href="./../_css/restaurant.css">
+    <link rel="stylesheet" href="./../css/bootstrap.css">
+    <link rel="stylesheet" href="./../css/restaurant.css">
 </head>
 <body>
     <header>
@@ -210,6 +210,6 @@
     </footer>
     <script src="../js/bootstrap.bundle.js"></script>
     <script src="../js/jquery-3.7.1.js"></script>
-    <script src="./../_js/restaurant.js"></script>
+    <script src="./../js/restaurant.js"></script>
 </body>
 </html>
