--- a/Swallab/login/order.html
+++ b/Swallab/login/order.html
@@ -54,9 +54,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="row mt-5 product-row" id="product-row-1">
+                <div class="row mt-5 " id="product-row-1">
                     <div class="col-md-2 d-flex align-items-center">
-                        <img src="./../image/hotpot/青花驕內頁/個人即享餐/1.avif" class="product-img" >
+                        <img src="./../image/hotpot/青花驕內頁/個人即享餐/1.avif" class="product-img " >
                     </div>
                     <div class="col-md-4 product-details">
                         <span class="items">個人即享鍋</span>
@@ -79,7 +79,7 @@
                 </div>
                 <div class="row mt-5 product-row" id="product-row-2">
                     <div class="col-md-2 d-flex align-items-center">
-                        <img src="./../image/hotpot/青花驕內頁/單點 主菜/1.avif" class="product-img" alt="Fries">
+                        <img src="./../" class="product-img" alt="Fries">
                     </div>
                     <div class="col-md-4 product-details">
                         <span class="items">美國安格斯牛小排 (200g)</span>
