--- a/Swallab/login/profile.html
+++ b/Swallab/login/profile.html
@@ -6,18 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-<<<<<<< HEAD
-    <link href="./../css/profile.css" rel="stylesheet">
-=======
-    <link rel="stylesheet" href="../_css/bootstrap.css">
-    <link rel="stylesheet" href="./../_css/backstage.css">
-    <link rel="stylesheet" href="./../_css/profilexi.css">
-    <title>個人檔案</title>
->>>>>>> 372fd8885204ee04c74dcfc07bfdf1ee04a9ec91
+    <link href="./../css/profilexi.css" rel="stylesheet">
+    <link rel="stylesheet" href="./../css/backstage.css">
+    <link rel="stylesheet" href="./../css/bootstrap.css">
 </head>
 
 <body>
-<<<<<<< HEAD
     <header>
         <div class="container-md">
             <div class="row ">
@@ -27,9 +21,6 @@
             </div>
         </div>  
     </header>
-=======
-    <header>header</header>
->>>>>>> 372fd8885204ee04c74dcfc07bfdf1ee04a9ec91
     <div class="container">
 
         <div class="row">
@@ -38,7 +29,7 @@
                     <p>個人檔案</p>
                 </a>
                 <a href="./order.html">
-                    <p>我的訂單1</p>
+                    <p>我的訂單</p>
                 </a>
                 <a href="">
                     <p>歷史紀錄</p>
@@ -57,7 +48,7 @@
                 <div class="container mt-3">
                     <div class="row">
                        <div class="  ml-5 d-flex">
-                        <img src="./../_images/root/LOGO.jpg"  style="width: 180px; height: auto;"> 
+                        <img src="./../images/root/LOGO.jpg"  style="width: 180px; height: auto;"> 
 
                         <div class="col-md-5 ml-10 ">
                             <div class="name">王小明</div>
