fix color of btn and select

--- a/Swallab/nav/nav.html
+++ b/Swallab/nav/nav.html
@@ -131,7 +131,7 @@
                 <!-- 登入及註冊按鈕 -->
                 <div class="ms-3 me-5 col-1">
                     <a href="#" class="">
-                        <button class="btn btn-outline-success btn-sm text-nowrap">登入/註冊</button>
+                        <button class="btn btn-sm btnLogin text-nowrap">登入/註冊</button>
                     </a>
                 </div>
             </div>
