fix icon and btn of footer

--- a/Swallab/nav/nav.html
+++ b/Swallab/nav/nav.html
@@ -24,7 +24,7 @@
         <div class="container">
             <!-- LOGO -->
             <a class="navbar-brand ms-5 col-1" href="../headpage/headpage.html">
-                <img src="../images/root/LOGO.jpg" alt="" class="logo d-inline-block align-text-top">
+                <img src="../images/root/logo.jpg" alt="" class="logo d-inline-block align-text-top">
             </a>
             <!-- 伸縮 -->
             <div class="collapse navbar-collapse col-10" id="navbarSupportedContent">
