--- a/Swallab/myHistory/myComment.html
+++ b/Swallab/myHistory/myComment.html
@@ -290,8 +290,8 @@
         <!-- 左右二欄 -->
         <div class="row justify-content-center mt-3">
             <!-- 左邊logo -->
-            <div class="col-4">
-                <img src="../images/root/LOGO.jpg" class="logo" alt="">
+            <div class="col-1">
+                <img src="../images/root/logo.jpg" class="logo" alt="">
             </div>
             <!-- 右邊三列 -->
             <div class="col-4">
@@ -307,8 +307,8 @@
                     <a href="#" class="col-6">IGICON<img src="" alt=""></a>
                 </div>
             </div>
-            <div class="row justify-content-center text-center">
-                <span>© 版權聲明</span>
+            <div class="row text-center">
+                <span>© 版權聲明: iSpan 大專</span>
             </div>
         </div>
     </footer>
