--- a/Swallab/footer/footer.html
+++ b/Swallab/footer/footer.html
@@ -21,7 +21,7 @@
         <!-- 左右二欄 -->
         <div class="row justify-content-center mt-3 container">
             <!-- 左邊logo -->
-            <div class="col-4 text-center" style="background-color: azure !important;">34567</div>
+            <div class="col-4 text-center"></div>
             <div class="col-2 justify-content-center">
                 <img src="../images/root/LOGO.jpg" class="logo" alt="">
             </div>
@@ -46,7 +46,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-4 text-center" style="background-color: azure !important;">34567</div>
+            <div class="col-4 text-center"></div>
         </div>
     </footer>
     <!-- Footer_end -->
